// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots should match the full width snapshot 1`] = `
<button
  className="px-4 h-8 rounded shadow bg-red-lightest text-red-dark font-semibold border border-red-lighter hover:bg-red-lighter w-full"
  onClick={[Function]}
  type="submit"
>
  I am a button!
</button>
`;

exports[`Button Snapshots should match the laoding snapshot 1`] = `
<button
  className="px-4 h-8 rounded shadow bg-red-lightest text-red-dark font-semibold border border-red-lighter hover:bg-red-lighter"
  onClick={[Function]}
  type="submit"
>
  <FontAwesomeIcon
    border={false}
    className=""
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f3f4",
          "M460.115 373.846l-6.941-4.008c-5.546-3.202-7.564-10.177-4.661-15.886 32.971-64.838 31.167-142.731-5.415-205.954-36.504-63.356-103.118-103.876-175.8-107.701C260.952 39.963 256 34.676 256 28.321v-8.012c0-6.904 5.808-12.337 12.703-11.982 83.552 4.306 160.157 50.861 202.106 123.67 42.069 72.703 44.083 162.322 6.034 236.838-3.14 6.149-10.75 8.462-16.728 5.011z",
        ],
        "iconName": "spinner-third",
        "prefix": "fal",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size={null}
    spin={true}
    symbol={false}
    title=""
    transform={null}
  />
</button>
`;

exports[`Button Snapshots should match the primary snapshot 1`] = `
<button
  className="px-4 h-8 rounded shadow bg-red-lightest text-red-dark font-semibold border border-red-lighter hover:bg-red-lighter"
  onClick={[Function]}
  type="submit"
>
  I am a button!
</button>
`;

exports[`Button Snapshots should match the secondary snapshot 1`] = `
<button
  className="px-4 h-8 rounded shadow bg-white text-red-darkest border border-red-lighter hover:bg-red-lightest"
  onClick={[Function]}
  type="submit"
>
  I am a button!
</button>
`;
